# toohoo

./: Cargo.toml  README.md
assets/texture/: ball.ron
config/: bindings.ron  display.ron
src/: bundle.rs  main.rs  state.rs
src/components/: acceleration.rs  capped_velocity.rs  friction.rs  mod.rs  pointer.rs  velocity.rs
src/systems/: friction_apply.rs  mod.rs  pointer.rs  pointer_update.rs  position_update.rs  velocity_capper.rs  velocity_update.rs
