[package]
name = "toohoo"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
amethyst = "0.15.0"
log = "0.4.8"
nalgebra = { version = "0.19.0", features = ["serde-serialize", "mint"] }

[profile.release]
lto = true

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
